syntax = "proto3";

import "google/protobuf/wrappers.proto";

package user;

option go_package = "github.com/microservice-ec-site/user";

service UserService {
  rpc GetUserByID (GetUserByIDRequest) returns (User);
  rpc ListUsersByIDs (ListUsersByIDsRequest) returns (ListUsersByIDsResponse);
  rpc Insert (CreateUserInput) returns (User);
  rpc Update (UpdateUserInput) returns (User);
  rpc Delete (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserByIDRequest {
  string id = 1;
}

message ListUsersByIDsRequest {
  repeated string ids = 1;
}

message ListUsersByIDsResponse {
  repeated User users = 1;
}

message CreateUserInput {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message UpdateUserInput {
  string id = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue password = 3;
  google.protobuf.StringValue first_name = 4;
  google.protobuf.StringValue last_name = 5;
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string created_at = 5;
  string updated_at = 6;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
